Fixed wrapping of flexboxes, fixed margin on hero text

--- a/landingSite/style.css
+++ b/landingSite/style.css
@@ -2,6 +2,8 @@
     color: white;
     background-color: #1f2937;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .navbar {
@@ -24,6 +26,7 @@
 .nav-list {
     display: flex;
     flex: auto;
+    flex-wrap: wrap;
     justify-content: flex-end;
     list-style: none;
     gap: 16px;
@@ -43,12 +46,17 @@ a.nav-link:hover, a.nav-link:active {
 .hero {
     display: flex;
     flex: auto;
-    justify-content: flex-start;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
     border: 4px solid white;
     border-radius: 15px;
     margin-top: 20px;
-    padding-left: 150px;
-    padding-right: 150px;
+}
+
+.hero-item {
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 .hero-img {
@@ -61,6 +69,7 @@ a.nav-link:hover, a.nav-link:active {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    max-width: 400px;
 }
 
 .hero-header {
@@ -79,6 +88,7 @@ a.hero-button:link, a.hero-button:visited {
     color: #e5e7eb;
     text-decoration: none;
     border-radius: 25px;
+    align-self: flex-start;
 }
 
 a.hero-button:hover, a.hero-button:active {
